<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>SuperMDS</groupId>
    <artifactId>SuperMDS</artifactId>
    <version>${revision}</version>
    <packaging>jar</packaging>

    <name>${project.artifactId}-${project.version}</name>
    <description>Java implementation of MDS family of algorithms</description>
    <inceptionYear>2025</inceptionYear>

    <properties>
        <!-- https://maven.apache.org/maven-ci-friendly.html -->
        <revision>${maven.build.timestamp}</revision>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>
        <javafx.version>21.0.6</javafx.version>
        <slf4j.version>2.0.17</slf4j.version>
        <apache.commons.math3.version>3.6.1</apache.commons.math3.version>
        <apache.commons.lang3.version>3.17.0</apache.commons.lang3.version>
		
        <maven.min.version>3.6.3</maven.min.version>
        <maven.compiler.release>23</maven.compiler.release>
        <maven.build.timestamp.format>yyyy.MM.dd</maven.build.timestamp.format>
        <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
        <maven.enforcer.plugin.version>3.3.0</maven.enforcer.plugin.version>
        <maven.assembly.plugin.version>3.6.0</maven.assembly.plugin.version>
        <maven.surefire.plugin.version>3.1.2</maven.surefire.plugin.version>
        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
        <codehaus.license.plugin.version>2.2.0</codehaus.license.plugin.version>
        <codehaus.flatten.plugin.version>1.5.0</codehaus.flatten.plugin.version>
        <codehaus.build.helper.maven.plugin.version>3.4.0</codehaus.build.helper.maven.plugin.version>
        <git.commit.maven.plugin.version>6.0.0</git.commit.maven.plugin.version>
        <junit.jupiter.version>5.10.0</junit.jupiter.version>
        <license.licenceFile>LICENSE.md</license.licenceFile>
        <license.licenseName>apache_v2</license.licenseName>
        <mainClassName>SuperMDSMain</mainClassName>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>${apache.commons.math3.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${apache.commons.lang3.version}</version>
        </dependency>
        <!-- Enforce slf4j-api version across dependencies-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>                
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.enforcer.plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[${maven.min.version},)</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                  <!--<release>23</release>-->
                  <compilerArgs>
                    <arg>--add-modules</arg>
                    <arg>jdk.incubator.vector</arg>
                  </compilerArgs>
                </configuration>
                
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>${junit.jupiter.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.maven.plugin.version}</version>
                <configuration>
                    <mainClass>${mainClassName}</mainClass>
                    <includePathExceptionsInClasspath>true</includePathExceptionsInClasspath>
                </configuration>
                <executions>
                    <execution>
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>${mainClassName}</mainClass>
                            <includePathExceptionsInClasspath>true</includePathExceptionsInClasspath>
                        </configuration>
                    </execution>
                    <execution>
                        <id>debug</id>
                        <configuration>
                            <debug>true</debug>
                            <debuglevel>lines,vars,source</debuglevel>
                            <options>
                                <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                            </options>
                            <mainClass>${mainClassName}</mainClass>
                            <includePathExceptionsInClasspath>true</includePathExceptionsInClasspath>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>${codehaus.build.helper.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <id>timestamp-property</id>
                        <goals>
                            <goal>timestamp-property</goal>
                        </goals>
                        <configuration>
                            <name>build.timestamp.full</name>
                            <pattern>yyyy-MM-dd'T'HH:mm:ss'Z'</pattern>
                            <locale>en_US</locale>
                            <timeZone>UTC</timeZone>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${codehaus.flatten.plugin.version}</version>
                <configuration>
                    <flattenMode>bom</flattenMode>
                    <!-- Updates POM bundled for install/packaging -->
                    <updatePomFile>true</updatePomFile>
                    <outputDirectory>${project.build.directory}</outputDirectory>
                    <keepCommentsInPom>false</keepCommentsInPom>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/build.properties</include>
                    <include>**/logback.xml</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>**/build.properties</exclude>
                </excludes>
            </resource>
        </resources>

    </build>
</project>
